# Vole-machine-task

./: ALU.cpp  ALU.h  CMakeLists.txt  CPU.cpp  CPU.h  CU.cpp  CU.h  Machine.cpp  Machine.h  MainUi.cpp  MainUi.h  Memory.cpp  Memory.h  Register.cpp  Register.h  main.cpp  testing.txt
